--- a/YngveHestem.FileTypeInfo/YngveHestem.FileTypeInfo.csproj
+++ b/YngveHestem.FileTypeInfo/YngveHestem.FileTypeInfo.csproj
@@ -2,6 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.0</Version>
+    <Description>This provides controls for using GenericParameterCollection in the GUI-framework Eto.Forms.</Description>
+    <PackageReleaseNotes>
+        Version 1.0.0:
+        - Initial release
+    </PackageReleaseNotes>
+    <Authors>Yngve J. K. Hestem</Authors>
+    <Copyright>Copyright (c) Yngve J. K. Hestem 2023</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>FileType filetype file type mime-type mime UTType UTI extension fileextensions collection</PackageTags>
+    <RepositoryUrl>https://github.com/HeruEwasham/FileTypeInfo.git</RepositoryUrl> 
+    <RepositoryType>git</RepositoryType>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
-
+  <ItemGroup>
+    <None Include="../README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 </Project>
