--- a/YngveHestem.FileTypeInfo/YngveHestem.FileTypeInfo.csproj
+++ b/YngveHestem.FileTypeInfo/YngveHestem.FileTypeInfo.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>1.0.0</Version>
-    <Description>This provides controls for using GenericParameterCollection in the GUI-framework Eto.Forms.</Description>
+    <Description>A collection of FileTypes with both file extensions, mime-types and UTType (UTI (Universal Type Identifier)). The FileType-structure makes it also easy to create a list including other types not defined yet also.</Description>
     <PackageReleaseNotes>
         Version 1.0.0:
         - Initial release
