--- a/YngveHestem.FileTypeInfo/YngveHestem.FileTypeInfo.csproj
+++ b/YngveHestem.FileTypeInfo/YngveHestem.FileTypeInfo.csproj
@@ -2,9 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Description>A collection of FileTypes with both file extensions, mime-types and UTType (UTI (Universal Type Identifier)). The FileType-structure makes it also easy to create a list including other types not defined yet also.</Description>
     <PackageReleaseNotes>
+        Version 1.0.1:
+        - Added some functions to get all extensions, mime-types and uttypes as a one dimensional string-list respectively. Theese functions also support removing duplicates from the list.
+
         Version 1.0.0:
         - Initial release
     </PackageReleaseNotes>
