--- a/YngveHestem.FileTypeInfo/YngveHestem.FileTypeInfo.csproj
+++ b/YngveHestem.FileTypeInfo/YngveHestem.FileTypeInfo.csproj
@@ -2,17 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
     <Description>A collection of FileTypes with both file extensions, mime-types and UTType (UTI (Universal Type Identifier)). The FileType-structure makes it also easy to create a list including other types not defined yet also.</Description>
     <PackageReleaseNotes>
-        Version 1.0.2:
-        - Now the methods check that inputted lists are null instead of creating Null-exceptions.
-
-        Version 1.0.1:
-        - Added some methods to get all extensions, mime-types and uttypes as a one dimensional string-list respectively. Theese methods also support removing duplicates from the list.
-
-        Version 1.0.0:
-        - Initial release
+        - Added support for the file types JSON, MIDI, YAML and WebVTT.
     </PackageReleaseNotes>
     <Authors>Yngve J. K. Hestem</Authors>
     <Copyright>Copyright (c) Yngve J. K. Hestem 2023</Copyright>
