--- a/YngveHestem.FileTypeInfo/YngveHestem.FileTypeInfo.csproj
+++ b/YngveHestem.FileTypeInfo/YngveHestem.FileTypeInfo.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
     <Description>A collection of FileTypes with both file extensions, mime-types and UTType (UTI (Universal Type Identifier)). The FileType-structure makes it also easy to create a list including other types not defined yet also.</Description>
     <PackageReleaseNotes>
-        - Added support for the file types JSON, MIDI, YAML and WebVTT.
+        - Added support for the file type SubStation Alpha (.ass) subtitles.
+        - Added support for the Open Document formats for Microsoft Word (.docx), Microsoft PowerPoint (.pptx) and Microsoft Excel (.xlsx). Theese are addded in new entries, seperate from the old formats.
+        - Added some more methods naming GetFileTypesByUTTypeParent(..) so you can get a list of types from a parent UTType.
     </PackageReleaseNotes>
     <Authors>Yngve J. K. Hestem</Authors>
     <Copyright>Copyright (c) Yngve J. K. Hestem 2023</Copyright>
